WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189872
Video track clone cannot preserve original property
https://bugs.webkit.org/show_bug.cgi?id=189872
Summary
Video track clone cannot preserve original property
Wendy
Reported
2018-09-21 18:50:45 PDT
use canvas.captureStream to create a video track, and the cloned track will not keep the property such as enabled compared with original track.
Attachments
Patch
(7.11 KB, patch)
2018-09-26 16:16 PDT
,
Wendy
no flags
Details
Formatted Diff
Diff
Patch
(6.47 KB, patch)
2018-09-26 17:15 PDT
,
Wendy
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-09-22 11:19:32 PDT
<
rdar://problem/44706579
>
Wendy
Comment 2
2018-09-26 16:16:23 PDT
Created
attachment 350920
[details]
Patch
youenn fablet
Comment 3
2018-09-26 16:41:14 PDT
Comment on
attachment 350920
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350920&action=review
> Source/WebCore/ChangeLog:8 > +
Can you provide more information about changes? For instance describe what was the issue.
> Source/WebCore/Modules/mediastream/CanvasCaptureMediaStreamTrack.h:43 > + static Ref<CanvasCaptureMediaStreamTrack> create(ScriptExecutionContext&, Ref<HTMLCanvasElement>&&, Ref<MediaStreamTrackPrivate>&& privateTrack);
It might be good to not define this create() method and directly call adoptRef(*new ...) in CanvasCaptureMediaStreamTrack::clone().
Wendy
Comment 4
2018-09-26 17:15:14 PDT
Created
attachment 350927
[details]
Patch
WebKit Commit Bot
Comment 5
2018-09-26 18:42:31 PDT
Comment on
attachment 350927
[details]
Patch Clearing flags on attachment: 350927 Committed
r236536
: <
https://trac.webkit.org/changeset/236536
>
WebKit Commit Bot
Comment 6
2018-09-26 18:42:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug